manifest/ddc_manifest_v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ss-ddc-server
  namespace: viyademo
spec:
  selector:
    matchLabels:
      app: ss-ddc-server
  replicas: 1
  template:
    metadata:
      labels:
        app: ss-ddc-server
    spec:
      containers:
      - name: ss-ddc-server
        image: sundareshsas/sas-ddc-server
        imagePullPolicy: Always
        ports:
        - name: https
          containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ss-ddc-service
  namespace: viyademo
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: ss-ddc-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: viyademo
  name: ss-ddc-ingress
  annotations:
      nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  rules:
  - host: viya4.demo.frasep.unx.sas.com
    http:
      paths:
      - path: /ddc
        pathType: Prefix
        backend:
          service:
            name: ss-ddc-service
            port:
              number: 8080
